mdm_Location/MDM_Location/src/objects/MDM_BugTracker__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <picklist>
            <picklistValues>
                <fullName>Ramakrishnan Ramadurai</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rajesh Pal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reis, David</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rife, Cristy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Type of component</description>
        <inlineHelpText>Type of component</inlineHelpText>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MDM BOOMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salestrak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDLIX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Description__c</fullName>
        <label>Detail Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reported_by__c</fullName>
        <defaultValue>$User.BMCServiceDesk__Account_Name__c</defaultValue>
        <label>Reported by</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>level of Severity</description>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good to have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Severity Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Severity Bug - Can Continue testing fix ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Severity Bug - Can&apos;t Continue testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MDM_BugTracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MDM_BugTracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_BugTracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>